add missed annotations